# rustickers

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
assets/: design.pptx
migrations/: 0001_init.sql  0002_add_top_most.sql
packaging/linux/: install.sh  rustickers.desktop
src/: hotkey.rs  http.rs  ipc.rs  main.rs
src/components/: mod.rs  webview.rs
src/components/stickers/: command.rs  markdown.rs  mod.rs  paint.rs  timer.rs
src/model/: mod.rs  sticker.rs
src/native/: hotkey.rs  http.rs  mod.rs
src/native/components/: webview.rs
src/native/components/stickers/: command.rs  markdown.rs  mod.rs  paint.rs  timer.rs
src/native/windows/: main.rs  mod.rs  sticker.rs
src/storage/: mod.rs  paths.rs  sqlite.rs
src/utils/: logging.rs  mod.rs  time.rs  url.rs
src/windows/: main.rs  sticker.rs
