[package]
name = "rustickers"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"
anyhow = "1.0.95"
async-trait = "0.1.85"
directories = "6.0.0"
sqlx = { version = "0.8.6", features = ["runtime-async-std", "sqlite", "macros", "migrate"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
chrono = { version = "0.4.43", default-features = false, features = ["clock", "std"] }
cron = "0.15.0"
interprocess = "2.2.1"
mimalloc = { version = "*", features = ["v3"] }
rdev = "0.5.3"
which = "8.0.0"
winsplit = "0.1.0"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
notify-rust = "4.11.7"
async-compat = "0.2.5"
futures = "0.3.31"
reqwest = "0.13.1"

[profile.release]
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for size.
lto = true          # Link Time Optimization (removes dead code).
codegen-units = 1   # Maximizes optimization (slower compile times).
panic = "abort"     # Removes stack unwinding (harder to debug crashes, but much smaller).

[build-dependencies]
winres = "0.1"
