[package]
name = "rustickers"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "2a3c297d7635146958ff147054016e08f16ec9b4" }
gpui-wry = { git = "https://github.com/longbridge/gpui-component", rev = "2a3c297d7635146958ff147054016e08f16ec9b4"}
wry = { version = "0.53.3", package = "lb-wry" }
anyhow = "1.0.102"
async-trait = "0.1.85"
directories = "6.0.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "registry"] }
sqlx = { version = "0.8.6", features = ["runtime-async-std", "sqlite", "macros", "migrate"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
chrono = { version = "0.4.43", default-features = false, features = ["clock", "std"] }
cron = "0.15.0"
interprocess = "2.2.1"
lyon = "1.0.16"
mimalloc = { version = "*", features = ["v3"] }
rdev = "0.5.3"
which = "8.0.0"
winsplit = "0.1.0"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
notify-rust = "4.11.7"
async-compat = "0.2.5"
futures = "0.3.32"
reqwest = "0.13.2"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel"] }
webbrowser = "1.1.0"

[profile.release]
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for size.
lto = true          # Link Time Optimization (removes dead code).
codegen-units = 1   # Maximizes optimization (slower compile times).
panic = "abort"     # Removes stack unwinding (harder to debug crashes, but much smaller).

[build-dependencies]
winres = "0.1"
